# aideen

./: .gitguardian.yaml  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  audit_results.txt  benchmark_fused_profiles.sh  build_benchmark_corpus.py  build_dataset.py  build_tiny_stories_corpus.py  build_val_set.py  check_training.sh  corpus_pg19_train.txt  corpus_pg19_train_smoke.txt  corpus_pg19_val.txt  corpus_pg19_val_smoke.txt  corpus_tinystories_smoke.txt  corpus_tinystories_train_512kb.txt  corpus_tinystories_val.txt  data  download_corpus.py  download_corpus.sh  error_log.txt  fit_scaling_law.py  fix_metal_args.py  launch_training_tty.sh  logs_training_tiny.txt  loxi-ai.code-workspace  missing_block.wgsl  model_large.opt  plan_memoryDEQ.md  plot_training.py  (+14 more)
aideen-backbone/: Cargo.toml  dataset_genesis.txt
aideen-backbone/src/: architecture.rs  checkpoint.rs  dataset.rs  deq_mode.rs  ffn_reasoning.rs  fixed_point_memory_decoder.rs  fixed_point_memory_reasoning.rs  generation_strategy.rs  gpu_backend.rs  gpu_deq.rs  gpu_embedding.rs  gpu_lm_head.rs  gradients.rs  lib.rs  linear_reasoning.rs  lm_head.rs  mamba_decoder.rs  mamba_slot_reasoning.rs  optimizer.rs  readout.rs  spectral_norm.rs  tensor.rs  tokenizer.rs  trainer.rs  weights_io.rs
aideen-backbone/src/shaders/: assoc_persistent_promote.wgsl  embedding_train.wgsl  fused_adjoint_picard.wgsl  fused_deq_update.wgsl  fused_fpm_retain_bwd.wgsl  fused_fpm_retain_bwd.wgsl.new  fused_fpm_retain_bwd.wgsl.new2  fused_fpm_shared_update.wgsl  fused_slot_coord_update.wgsl  lm_exact_accum_bias.wgsl  lm_exact_accum_dldh.wgsl  lm_exact_accum_token.wgsl  lm_exact_bg_apply.wgsl  lm_exact_forward.wgsl  lm_exact_token_logits.wgsl  lm_exact_token_lossgrad.wgsl  lm_exact_w_apply.wgsl  lm_exact_w_update.wgsl  lm_train.wgsl  segment_memory_promote.wgsl  slot_rhs_expand.wgsl  staged_adjoint_picard.wgsl  staged_adjoint_picard_clean.wgsl
aideen-backbone/tests/: lm_head_backward_tests.rs  picard_pipeline_test.rs
aideen-bench/: Cargo.toml
aideen-bench/bench/: README.md  profiles.csv  profiles_attn_512_tune.csv  profiles_core_attn_tune.csv  profiles_stage.csv  profiles_v2.csv  run_matrix.sh  run_stage_matrix.sh
aideen-bench/results/: arch_bench_1773075974.csv  arch_bench_1773077357.csv  arch_bench_1773077407.csv  arch_bench_1773077442.csv  arch_bench_1773079121.csv  arch_bench_1773079651.csv  arch_bench_1773094994.csv  arch_bench_1773108227.csv  arch_bench_1774371235.csv  arch_bench_1774765501.csv  arch_bench_1774810928.csv  arch_bench_1774900929.csv  arch_bench_1774907443.csv
aideen-bench/results/deq_no_mamba_tune2_20260310_233350/: summary.csv
aideen-bench/results/deq_no_mamba_tune2_20260310_233411/: summary.csv
aideen-bench/results/deq_no_mamba_tune_20260310_232932/: summary.csv
aideen-bench/results/invalid/: README.md  arch_bench_1773075801.csv  arch_bench_1773077353.csv
aideen-bench/src/: dataset.rs  main.rs  transformer.rs  transformer_candle.rs
aideen-block/: Cargo.toml  index.html  worker.js
aideen-block/src/: async_bridge.rs  cg_bridge.rs  deq_bridge.rs  fixed_point_memory.rs  lib.rs  mamba.rs  moe.rs  router.rs  tensor.rs  wasm.rs
aideen-block/src/model/: config.rs  forward.rs  layer.rs  mod.rs
aideen-block/src/shaders/: argmax.wgsl  assoc_state_carry.wgsl  attention.wgsl  cg_init.wgsl  cg_matvec.wgsl  cg_solver.wgsl  cg_update.wgsl  deq_forward.wgsl  deq_forward_exact.wgsl  deq_forward_pool.wgsl  deq_forward_subgroup.wgsl  deq_sgd_update.wgsl  deq_slot_attn_unified_clean.wgsl  deq_slot_attn_update_clean.wgsl  deq_slot_qkv_clean.wgsl  deq_slot_signal_init.wgsl  embedding.wgsl  fixed_point_memory.wgsl  fpm_p1_norm_proj.wgsl  fpm_p2_conv.wgsl  fpm_p3_x_proj.wgsl  fpm_p4_dt_proj.wgsl  fpm_p5_ssm.wgsl  fpm_p6_out_proj.wgsl  hist_v2_project.wgsl  hist_v2_signal_cache.wgsl  hist_v2_temporal.wgsl  kernel_v8.wgsl  lm_head.wgsl  mamba.wgsl  mamba_p1_norm_proj.wgsl  mamba_p2_conv.wgsl  mamba_p3_x_proj.wgsl  mamba_p4_dt_proj.wgsl  mamba_p5_ssm.wgsl  moe.wgsl  (+5 more)
aideen-block/tests/: deq_pipeline_test.rs
aideen-coordinator/: Cargo.toml
aideen-coordinator/src/: audit.rs  cohort.rs  consistency.rs  governance.rs  ledger.rs  lib.rs  main.rs  replay_sampler.rs  reputation.rs  rollout.rs  shadow_eval.rs
aideen-coordinator/tests/: governance_tests.rs  learning_plane_tests.rs  persist_tests.rs  rollout_tests.rs
aideen-core/: Cargo.toml
aideen-core/src/: agent.rs  artifacts.rs  block_backend.rs  capabilities.rs  compute.rs  control.rs  deq_mode.rs  doc_memory.rs  ethics.rs  integrator.rs  lib.rs  memory.rs  model.rs  model_head.rs  protocol.rs  quality.rs  readout.rs  reasoning.rs  state.rs  types.rs
aideen-core/tests/: agent_store_tests.rs  netmsg_codec_tests.rs
aideen-critic/: Cargo.toml
aideen-critic/src/: lib.rs  signer.rs
aideen-engine/: Cargo.toml
aideen-node/: Cargo.toml
aideen-node/src/: critic.rs  demo.rs  inference.rs  lib.rs  main.rs  runner.rs  update.rs
aideen-node/tests/: artifact_selector_tests.rs  attractor_memory_tests.rs  capabilities_tests.rs  circuit_breaker_tests.rs  expert_e2e_tests.rs  fs_agent_store_tests.rs  fs_doc_memory_tests.rs  net_pipeline_e2e.rs  peer_directory_tests.rs  quic_dial_tests.rs  quic_e2e.rs  readout_e2e.rs  reconcile_tests.rs  replay_tests.rs  router_stats_tests.rs  runner_integration_tests.rs  stability_tests.rs  trust_store_persist_tests.rs  update_flow.rs
aideen-reasoning/: Cargo.toml
aideen-reasoning/src/: attention.rs  deq.rs  ffn.rs  lib.rs
aideen-training-lab/: Cargo.toml
aideen-training-lab/src/: backward.rs  checkpoint.rs  data.rs  dataset.rs  gradients.rs  lib.rs  loss.rs  optimizer.rs  schedule.rs  signer.rs  trainer.rs
aideen-training-lab/tests/: backward_tests.rs  data_tests.rs  optimizer_tests.rs  schedule_tests.rs  trainer_tests.rs
loxi-engine/: Cargo.toml
loxi-node/: Cargo.toml
loxi-node/src/: lib.rs  main.rs
loxi-runtime/: Cargo.toml
loxi-runtime/src/: autograd.rs  dispatch.rs  lib.rs  model.rs  optimizer.rs  tensor.rs
(+172 files in other folders)
