[package]
name = "aideen-bench"
version = "0.1.0"
description = "Benchmarking: DEQ+SSM vs Transformer (iso-parameter comparison)"
license = "MIT"
repository = "https://github.com/SergioAriel/aideen"
authors = ["Sergio Ariel Solis <solis.sergioariel@gmail.com>", "Juan Patricio Marchetto <juanpatriciomarchetto@gmail.com>"]
edition = "2021"

[[bin]]
name = "arch_bench"
path = "src/main.rs"

[dependencies]
aideen-backbone  = { path = "../aideen-backbone", features = ["lab"] }
aideen-training  = { path = "../aideen-training-lab", features = ["wgpu"] }
aideen-core      = { path = "../aideen-core" }
nalgebra         = "0.32"
rand             = "0.8.5"
candle-core      = "0.8.4"
candle-nn        = "0.8.4"
statrs           = "0.18"
bytemuck         = "1"
