[package]
name = "aideen-block"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# ── Dependencias nativas (siempre disponibles) ────────────────────────────────
[dependencies]
wgpu        = "23"
bytemuck    = { version = "1.16", features = ["derive"] }
pollster    = "0.3"
tokio       = { version = "1.30", features = ["sync", "rt", "macros", "rt-multi-thread"] }
serde_json  = "1"
futures     = { version = "0.3", default-features = false, features = ["alloc"] }
rand        = { version = "0.8", features = ["small_rng"] }

# ── Dependencias WASM-only (solo cuando target = wasm32) ──────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4.42"
js-sys               = "0.3.69"
web-sys              = { version = "0.3.69", features = [
    "console", "Window", "Document",
    "HtmlCanvasElement", "WebGl2RenderingContext",
    "Gpu", "GpuAdapter", "GpuDevice",
    "DedicatedWorkerGlobalScope",
] }
getrandom             = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
