[package]
name = "aideen-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.13"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand    = "0.8"
serde   = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2    = "0.10"

aideen-core = { path = "../aideen-core" }
aideen-node = { path = "../aideen-node" }
aideen-training = { path = "../aideen-training-lab" }
