[package]
name = "aideen-core"
version = "0.1.0"
description = "Public contracts, cryptographic types, sealed protocol constants"
license = "MIT"
repository = "https://github.com/SergioAriel/aideen"
authors = ["Sergio Ariel Solis <solis.sergioariel@gmail.com>", "Juan Patricio Marchetto <juanpatriciomarchetto@gmail.com>"]
edition = "2021"

[dependencies]
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde"] }
bincode = "1.3"
zstd = "0.13"
