[package]
name = "aideen-critic"
version = "0.1.0"
description = "Quality evaluation module (non-trainable, safety)"
license = "MIT"
repository = "https://github.com/SergioAriel/aideen"
authors = ["Sergio Ariel Solis <solis.sergioariel@gmail.com>", "Juan Patricio Marchetto <juanpatriciomarchetto@gmail.com>"]
edition = "2021"

[dependencies]
aideen-core = { path = "../aideen-core" }
sha2      = "0.10"
serde     = { version = "1.0", features = ["derive"] }
bincode   = "1.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand      = "0.8"
