[package]
name = "aideen-node"
version = "0.1.0"
description = "P2P network node (QUIC, WebTransport)"
license = "MIT"
repository = "https://github.com/SergioAriel/aideen"
authors = ["Sergio Ariel Solis <solis.sergioariel@gmail.com>", "Juan Patricio Marchetto <juanpatriciomarchetto@gmail.com>"]
edition = "2021"

[[bin]]
name = "demo"
path = "src/demo.rs"
required-features = []

# WASM-safe deps (compile on both targets)
[dependencies]
aideen-core = { path = "../aideen-core" }
bincode   = "1.3.3"
nalgebra  = "0.32"
sha2      = "0.10.9"

# Native deps (tokio, QUIC, backbone: do not compile on wasm32-unknown-unknown)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
aideen-reasoning = { path = "../aideen-reasoning" }
aideen-backbone  = { path = "../aideen-backbone" }
aideen-engine    = { path = "../aideen-engine" }
sysinfo = "0.30"
rand   = "0.8"
serde  = { version = "1", features = ["derive"] }
tokio  = { version = "1.0", features = ["full"] }
quinn  = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen  = "0.13"

# WASM deps (OPFS + JS interop: browser only)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
web-sys = { version = "0.3", features = [
    "Navigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemFileHandle",
    "FileSystemGetFileOptions",
    "FileSystemWritableFileStream",
    "FileSystemCreateWritableOptions",
    "File",
    "Blob",
] }

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand          = "0.8"
