[package]
name = "aideen-reasoning"
version = "0.1.0"
description = "Trainable reasoning engine"
license = "MIT"
repository = "https://github.com/SergioAriel/aideen"
authors = ["Sergio Ariel Solis <solis.sergioariel@gmail.com>", "Juan Patricio Marchetto <juanpatriciomarchetto@gmail.com>"]
edition = "2021"

[dependencies]
aideen-core = { path = "../aideen-core" }
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
