[package]
name = "loxi-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
loxi-core = { path = "../loxi-core" }
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
nalgebra = "0.32"
futures-intrusive = "0.5.0"
tokio = { version = "1.49.0", features = ["rt", "macros"] }
